ProdIND/ProdPrograms/force-app/main/default/objects/AccountTeamMember/fields/AccountTeamExtern__c.field-meta.xml
<CustomField>
    <fullName>AccountTeamExtern__c</fullName>
    <externalId>true</externalId>
    <label>AccountTeamExtern</label>
    <length>100</length>
    <type>Text</type>
</CustomField>