ProdIND/ProdPrograms/force-app/main/default/objects/AccountTeamMember/fields/CVO_Counter__c.field-meta.xml
<CustomField>
    <fullName>CVO_Counter__c</fullName>
    <description>Used to store how many Loan application is assigned to CVO user</description>
    <label>CVO Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>