ProdIND/ProdPrograms/force-app/main/default/objects/AccountTeamMember/fields/FI_Executive_Counter__c.field-meta.xml
<CustomField>
    <fullName>FI_Executive_Counter__c</fullName>
    <label>FI Executive Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>