ProdIND/ProdPrograms/force-app/main/default/objects/AccountTeamMember/fields/HERO_MA_Counter__c.field-meta.xml
<CustomField>
    <fullName>HERO_MA_Counter__c</fullName>
    <label>HERO_MA_Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>