ProdIND/ProdPrograms/force-app/main/default/objects/AccountTeamMember/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L0.5</fullName>
            </value>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>L3.5</fullName>
            </value>
            <value>
                <fullName>L4</fullName>
            </value>
            <value>
                <fullName>L5</fullName>
            </value>
            <value>
                <fullName>L6</fullName>
            </value>
            <value>
                <fullName>L7</fullName>
            </value>
            <value>
                <fullName>L8</fullName>
            </value>
            <value>
                <fullName>L9</fullName>
            </value>
            <value>
                <fullName>L10</fullName>
            </value>
            <value>
                <fullName>L11</fullName>
            </value>
            <value>
                <fullName>L5.5</fullName>
            </value>
            <value>
                <fullName>L4.5</fullName>
            </value>
            <value>
                <fullName>L6.5</fullName>
            </value>
            <value>
                <fullName>L2.5</fullName>
            </value>
            <value>
                <fullName>L9.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>