ProdIND/ProdPrograms/force-app/main/default/objects/AccountTeamMember/fields/PE_Counter__c.field-meta.xml
<CustomField>
    <fullName>PE_Counter__c</fullName>
    <description>Used to store how many Loan application is assigned to PE user</description>
    <label>PE Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>