ProdIND/ProdPrograms/force-app/main/default/objects/AccountTeamMember/fields/TAFE_BE_Counter__c.field-meta.xml
<CustomField>
    <fullName>TAFE_BE_Counter__c</fullName>
    <description>Used to store how many TAFE Loan application is assigned to BE user</description>
    <label>TAFE_BE_Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>